# Selenium-Docker-FastAPI

./: .gitignore  .python-version  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: .env  __init__.py  requirements.txt
app/api/: __init__.py  main.py
app/api/routers/: __init__.py  browser.py
