[project]
name = "cloudselenium"
version = "0.1.0"
description = "selenium browser accesses through cloud via google run + fastAPI"
authors = [
    {name = "PedroEgg",email = "pedro.eggg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "browsermob-proxy (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
package-mode = false